[package]
name = "cses-cli"
version = "0.1.0"
authors = ["Anton Taleiko <anton.taleiko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.4"
console = "0.14"
miniserde = "0.1"
minreq = { version = "2", features = ["https-native"] }
anyhow = "1"
thiserror = "1"
libc = "0.2"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1
