[package]
name = "cses-cli"
version = "0.1.0"
authors = ["Anton Taleiko <anton.taleiko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.4"
console = "0.14"
miniserde = "0.1"
minreq = { version = "2.4.2", features = ["https-native"] }
anyhow = "1"
thiserror = "1"
base64 = "0.13.0"
libc = "0.2"

[dev-dependencies]
ctrlc = "3"
assert_cmd = "1"
predicates = "1"
linkme = "0.2"
backtrace = "0.3"
mockall = "0.9.1"

[[test]]
name = "integration"
path = "tests/integration/main.rs"
harness = false

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1
