[package]
name = "cses-cli"
version = "0.1.4"
authors = [
  "Antto Heikura <antto.heikura@helsinki.fi>",
  "Valokoodari <joona.huuhtanen@helsinki.fi>",
  "Kalle Luopajärvi <kalle.luopajarvi@helsinki.fi>",
  "Roope Salmi <roope.j.salmi@helsinki.fi>",
  "Anton Taleiko <anton.taleiko@gmail.com>",
]
rust-version = "1.75"
edition = "2021"
autotests = false

license = "MIT"
description = "CSES CLI is a lightweight tool for using CSES from the command line."
readme = "README.md"
documentation = "https://github.com/csesfi/cses-cli/wiki/User-manual"
homepage = "https://cses.fi/"
repository = "https://github.com/csesfi/cses-cli"
categories = ["command-line-utilities"]
exclude = ["/api", "/tests"]

[dependencies]
pico-args = "0.4"
console = "0.14"
miniserde = "0.1"
minreq = { version = "2.4.2", features = ["https-native"] }
anyhow = "1"
thiserror = "1"
base64 = "0.13.0"
libc = "0.2"

[dev-dependencies]
ctrlc = "3"
assert_cmd = "2"
predicates = "2"
linkme = "0.2"
backtrace = "0.3"
mockall = "0.10"

# [[test]]
# name = "integration"
# path = "tests/integration/main.rs"
# harness = false

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1
strip = 'symbols'

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(custom_abort)'] }
