[tool.poetry]
name = "mock_server"
version = "0.1.0"
description = ""
authors = ["Kalle Luopajärvi <kalle.luopajarvi@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
connexion = "^2.7.0"
prance = "^0.21.2"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
