[tool.poetry]
name = "mock_server"
version = "0.1.0"
description = ""
authors = [
  "Antto Heikura <antto.heikura@helsinki.fi>",
  "Valokoodari <joona.huuhtanen@helsinki.fi>",
  "Kalle Luopajärvi <kalle.luopajarvi@helsinki.fi>",
  "Roope Salmi <roope.j.salmi@helsinki.fi>",
  "Anton Taleiko <anton.taleiko@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.6"
connexion = "^2.7.0"
prance = "^0.21.2"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
